--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
 	"type": "module",
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.10.1",
-		"@supabase/supabase-js": "^2.29.0"
+		"@supabase/supabase-js": "^2.29.0",
+		"octokit": "^3.1.0"
 	}
 }
