--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch",
 		"lint": "prettier --plugin-search-dir . --check . && eslint .",
-		"format": "prettier --plugin-search-dir . --write ."
+		"format": "prettier --plugin-search-dir . --write .",
+		"gen-db-types": "npx supabase gen types typescript --project-id \"jalxdvhftqvgnwvlryve\" --schema public > src/lib/database.types.ts"
 	},
 	"devDependencies": {
 		"@floating-ui/dom": "^1.4.5",
