--- a/package.json
+++ b/package.json
@@ -39,6 +39,9 @@
 		"bits-ui": "^0.20.0",
 		"clsx": "^2.1.0",
 		"lucide-svelte": "^0.362.0",
+		"mode-watcher": "^0.3.0",
+		"octokit": "^3.1.2",
+		"svelte-sonner": "^0.3.19",
 		"tailwind-merge": "^2.2.2",
 		"tailwind-variants": "^0.2.1"
 	}
