--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 		"clsx": "^2.1.0",
 		"lucide-svelte": "^0.362.0",
 		"mode-watcher": "^0.3.0",
+		"moment": "^2.30.1",
 		"octokit": "^3.1.2",
 		"radix-icons-svelte": "^1.2.1",
 		"svelte-sonner": "^0.3.19",
