--- a/components.json
+++ b/components.json
@@ -1,14 +1,17 @@
 {
-  "$schema": "https://shadcn-svelte.com/schema.json",
-  "style": "default",
-  "tailwind": {
-    "config": "tailwind.config.js",
-    "css": "src/app.pcss",
-    "baseColor": "neutral"
-  },
-  "aliases": {
-    "components": "$lib/shadcn/components",
-    "utils": "$lib/shadcn/utils"
-  },
-  "typescript": true
+	"$schema": "https://next.shadcn-svelte.com/schema.json",
+	"style": "default",
+	"tailwind": {
+		"config": "tailwind.config.js",
+		"css": "src/app.pcss",
+		"baseColor": "neutral"
+	},
+	"aliases": {
+		"components": "$lib/shadcn/components",
+		"utils": "$lib/shadcn/utils",
+		"ui": "$lib/components/ui",
+		"hooks": "$lib/hooks"
+	},
+	"typescript": true,
+	"registry": "https://next.shadcn-svelte.com/registry"
 }
