--- a/package.json
+++ b/package.json
@@ -14,11 +14,12 @@
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.3.1",
 		"@sveltejs/kit": "^2.8.1",
-		"@sveltejs/vite-plugin-svelte": "^3.1.2",
+		"@sveltejs/vite-plugin-svelte": "^4.0.0",
 		"@types/eslint": "^8.56.12",
 		"@typescript-eslint/eslint-plugin": "^7.18.0",
 		"@typescript-eslint/parser": "^7.18.0",
 		"autoprefixer": "^10.4.20",
+		"clsx": "^2.1.1",
 		"eslint": "^8.57.1",
 		"eslint-config-prettier": "^9.1.0",
 		"eslint-plugin-svelte": "^2.46.0",
@@ -27,9 +28,12 @@
 		"prettier": "^3.3.3",
 		"prettier-plugin-svelte": "^3.3.1",
 		"prettier-plugin-tailwindcss": "^0.5.14",
-		"svelte": "^4.2.19",
-		"svelte-check": "^3.8.6",
+		"svelte": "^5.0.0",
+		"svelte-check": "^4.0.0",
+		"tailwind-merge": "^2.5.4",
+		"tailwind-variants": "^0.2.1",
 		"tailwindcss": "^3.4.15",
+		"tailwindcss-animate": "^1.0.7",
 		"tslib": "^2.8.1",
 		"typescript": "^5.6.3",
 		"vite": "^5.4.11"
@@ -38,9 +42,6 @@
 	"dependencies": {
 		"@vercel/analytics": "^1.4.1",
 		"bits-ui": "^0.20.1",
-		"clsx": "^2.1.1",
-		"lucide-svelte": "^0.362.0",
-		"tailwind-merge": "^2.5.4",
-		"tailwind-variants": "^0.2.1"
+		"lucide-svelte": "^0.362.0"
 	}
 }
